# Python_for_Analytical_Chemists

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.claude/commands/: video.md
docs/: STATUS.md  curriculum.md  simulated_data_design.md
media/: 2.4_reading_instrument_files.md  2.5_plotting_that_reveals_chemistry.md  3.2_savgol_smoothing_derivatives.md  3.3_asls_baseline_correction.md
notebooks/: README.md
notebooks/01_foundations/1.1_why_python_on_the_lab_bench/: 1.1_why_python_on_the_lab_bench.ipynb  README.md
notebooks/01_foundations/1.2_notebooks_scripts_and_reproducibility/: 1.2_notebooks_scripts_and_reproducibility.ipynb  README.md
notebooks/01_foundations/1.3_variables_numbers_and_units/: 1.3_variables_numbers_and_units.ipynb  README.md
notebooks/01_foundations/1.4_lists_arrays_and_a_first_spectrum/: 1.4_lists_arrays_and_a_first_spectrum.ipynb  README.md
notebooks/01_foundations/1.5_loops_and_conditionals_for_batch_thinking/: 1.5_loops_and_conditionals_for_batch_thinking.ipynb  README.md
notebooks/01_foundations/1.6_functions_write_once_reuse/: 1.6_functions_write_once_reuse.ipynb  README.md
notebooks/02_scientific_computing/2.1_numpy_arrays_whole_spectra/: 2.1_numpy_arrays_whole_spectra.ipynb  README.md
simulated_data/: README.md  __init__.py  _rng.py  nir.py  raman.py  types.py  uvvis.py
simulated_data/core/: __init__.py  artifacts.py  axes.py  background.py  baselines.py  noise.py  peaks.py  scatter.py
tests/: test_simulated_data_nir.py  test_simulated_data_phase1.py  test_simulated_data_raman.py
(+40 files in other folders)
